<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project
     Copyright (C) 2011 Mariano Alvarez Fernandez

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
  <string name="mode_ready">MSnake\nReady?\nTouch the screen\nto begin</string>
  <string name="mode_pause">On Pause\nReady?\nTouch the screen\nto continue</string>
  <string name="mode_lose_prefix">Game Over\nScore: </string>
  <string name="mode_lose_prefix_cr">You have a new record!\nScore: </string>
  <string name="mode_lose_suffix">\nPlay again?\nTouch the screen\nto begin</string>

  <string name="score">Score: </string>
  <string name="record">Record: </string>

  <string name="bIzquierda">Left</string>
  <string name="bArriba">Up</string>
  <string name="bAbajo">Down</string>
  <string name="bDerecha">Right</string>
  <string name="bTIzquierda">Turn Left</string>
  <string name="bTDerecha">Turn Right</string>

  <string name="menu_walls">Walls</string>
  <string name="menu_zoom">Size</string>
  <string name="menu_speed">Fast Speed</string>
  <string name="menu_input">Control Mode</string>
  <string name="menu_records">Records</string>
  <string name="menu_about">About</string>
  <string name="menu_settings">Settings</string>

  <string name="snake_layout_text_text"></string>
  <string name="toast_wallson">Walls on</string>
  <string name="toast_wallsoff">Walls off</string>
  <string name="toast_fastoff">Slow speed</string>
  <string name="toast_faston">Fast speed</string>
  <string name="toast_zoombig">Big size</string>
  <string name="toast_zoomnormal">Normal size</string>
  <string name="toast_zoomsmall">Small size</string>

  <string name="toast_input2k">Control mode:\nturn-left turn-right buttons</string>
  <string name="toast_input4k">Control mode:\n4 directional buttons</string>
  <string name="toast_inputog">Control mode:\nonly finger gestures</string>

  <string name="records_title">MSnake Records</string>
  <string name="records_linet">"Size   Walls Speed Record\n------ ----- ----- ------"</string>
  <string name="records_line0">"\nBig    On    Slow  "</string>
  <string name="records_line1">"\nBig    Off   Slow  "</string>
  <string name="records_line2">"\nNormal On    Slow  "</string>
  <string name="records_line3">"\nNormal Off   Slow  "</string>
  <string name="records_line4">"\nSmall  On    Slow  "</string>
  <string name="records_line5">"\nSmall  Off   Slow  "</string>
  <string name="records_line6">"\nBig    On    Fast  "</string>
  <string name="records_line7">"\nBig    Off   Fast  "</string>
  <string name="records_line8">"\nNormal On    Fast  "</string>
  <string name="records_line9">"\nNormal Off   Fast  "</string>
  <string name="records_line10">"\nSmall  On    Fast  "</string>
  <string name="records_line11">"\nSmall  Off   Fast  "</string>

  <string name="settings_title">MSnake settings</string>
  <string name="sms_walls">Walls</string>
  <string name="sms_walls_on">On</string>
  <string name="sms_walls_off">"Off "</string>
  <string name="sms_speed">Snake speed</string>
  <string name="sms_speed_slow">Slow</string>
  <string name="sms_speed_fast">Fast</string>
  <string name="sms_size">Board size</string>
  <string name="sms_size_big">Big board</string>
  <string name="sms_size_normal">Normal</string>
  <string name="sms_size_small">Small</string>
  <string name="sms_control">Control mode</string>
  <string name="sms_control_4b">Four buttons</string>
  <string name="sms_control_2b">Two buttons</string>
  <string name="sms_control_og">Only finger gestures</string>

  <string name="dlg_walls_title">Changing walls will reset the current game, are you sure?</string>
  <string name="dlg_size_title">Changing size will reset the current game, are you sure?</string>
  <string name="dlg_speed_title">Changing speed will reset the current game, are you sure?</string>
  <string name="dlg_input_title">Changing control mode will reset the current game, are you sure?</string>
  <string name="dlg_warmsettings_title">Changing settings will reset the current game, are you sure?</string>
  <string name="dlg_exit_title">This will stop the current game, are you sure?</string>
  <string name="dlg_yes">Yes</string>
  <string name="dlg_no">No</string>
  <string name="dlg_ok">OK</string>
  <string name="dlg_cancel">Cancel</string>

  <string name="about_title">MSnake v2.0</string>
  <string name="about_text">Copyright (C) 2007\n
The Android Open Source Project\n
Copyright (C) 2011\n
Mariano Alvarez Fernandez\n\n 
Beta tester\n
Guillermo Alvarez Ocaña\n\n
Derived from the Snake game in\n
the Android SDK. A simple game\n
that everyone can enjoy\n\n
MSnake is open source under\n
the Apache License\n
Visit http://www.fgrim.com/msnake\n</string>
  <string name="news_button">New in v2.0</string>
  <string name="news_title">New in MSnake v2.0</string>
  <string name="news_text">
Version 2.0\n\n
Solved bugs and FC when the program returns
from suspended state.\n\n

Version 1.9\n\n
All the settings are now grouped in a unique
dialog for easier use.\n\n

Version 1.8\n\n
New control mode using gestures, touch the
screen and move your finger up, down, left
or right to move the snake.\n\n
You can select three control modes: 4 directional
buttons, turn-left turn-right buttons or only
finger gestures.\n\n
Polished dialogs.\n\n

Version 1.7\n\n
Now if you press the <b>Back</b> key and
a game is running, a message ask for
confirmation.\n\n
Tip. Use the <b>Home</b> key if you want to
return later to the current game.\n</string>
  <string name="news16_text">
You can select a new <b>fast speed</b>\n
option using the phone Menu button.\n\n
Stored records are different for fast\n
and slow speed.\n\n
If a game is running and you try to\n
change walls, size or speed, a dialog\n
will warning you it reset the current\n
game\n</string>
</resources>
