<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Mariano Alvarez Fernandez

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical" android:id="@+id/settings_layout_root">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<LinearLayout android:layout_width="wrap_content"
			android:background="#444400" android:layout_height="match_parent"
			android:orientation="vertical">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20sp"
				android:text="@string/sms_walls"></TextView>
			<RadioGroup android:id="@+id/smsrg1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<RadioButton android:id="@+id/smsrg1r0"
					android:layout_weight="1" android:layout_height="wrap_content"
					android:text="@string/sms_walls_on" android:layout_width="match_parent"
					android:checked="true"></RadioButton>
				<RadioButton android:id="@+id/smsrg1r1"
					android:layout_weight="1" android:layout_height="wrap_content"
					android:text="@string/sms_walls_off" android:layout_width="match_parent"></RadioButton>
			</RadioGroup>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
			android:background="#004444" android:layout_height="match_parent"
			android:orientation="vertical">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20sp"
				android:text="@string/sms_speed"></TextView>
			<RadioGroup android:id="@+id/smsrg2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<RadioButton android:id="@+id/smsrg2r0"
					android:layout_weight="1" android:layout_height="wrap_content"
					android:text="@string/sms_speed_slow" android:layout_width="match_parent"
					android:checked="true"></RadioButton>
				<RadioButton android:id="@+id/smsrg2r1"
					android:layout_weight="1" android:layout_height="wrap_content"
					android:text="@string/sms_speed_fast" android:layout_width="match_parent"></RadioButton>
			</RadioGroup>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:background="#440044" android:layout_height="match_parent"
		android:orientation="vertical">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="20sp"
			android:text="@string/sms_size"></TextView>
		<RadioGroup android:id="@+id/smsrg3" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<RadioButton android:id="@+id/smsrg3r0"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:text="@string/sms_size_big" android:layout_width="match_parent"
				android:checked="true"></RadioButton>
			<RadioButton android:id="@+id/smsrg3r1"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:text="@string/sms_size_normal" android:layout_width="match_parent"></RadioButton>
			<RadioButton android:id="@+id/smsrg3r2"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:text="@string/sms_size_small" android:layout_width="match_parent"></RadioButton>
		</RadioGroup>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:background="#004400" android:layout_height="match_parent"
		android:orientation="vertical">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="20sp"
			android:text="@string/sms_control"></TextView>
		<RadioGroup android:id="@+id/smsrg4" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<RadioButton android:id="@+id/smsrg4r0"
				android:layout_weight="1" android:textSize="12sp"
				android:layout_height="wrap_content" android:text="@string/sms_control_4b"
				android:layout_width="wrap_content" android:checked="true"></RadioButton>
			<RadioButton android:id="@+id/smsrg4r1"
				android:layout_weight="1" android:textSize="12sp"
				android:layout_height="wrap_content" android:text="@string/sms_control_2b"
				android:layout_width="wrap_content"></RadioButton>
			<RadioButton android:id="@+id/smsrg4r2"
				android:layout_weight="1" android:textSize="12sp"
				android:layout_height="wrap_content" android:text="@string/sms_control_og"
				android:layout_width="wrap_content"></RadioButton>
		</RadioGroup>
	</LinearLayout>

</LinearLayout>
